# swagger_server/models/__init__.py
@@ -4,7 +4,6 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.assignment import Assignment
-from swagger_server.models.grade import Grade
 from swagger_server.models.grades import Grades
 from swagger_server.models.model_class import ModelClass
 from swagger_server.models.student import Student
